Remove ExplainLeaf & integrate SymbolPrinter logic into Symbol
Some symbols delegated `toString` to `representation()` of
`ExplainLeaf`, some to `SymbolPrinter`, some had their custom
`toString`.

In some places we then used the `representation()` of `ExplainLeaf`, in
other places we used `SymbolPrinter`.

To make the formatting of symbols consistent, this adds a
`toString(style)` to `Symbol` and removes both `ExplainLeaf` and
`SymbolPrinter`.