@@ -21,7 +21,7 @@
 
 package io.crate.execution.dsl.projection;
 
-import com.google.common.collect.ImmutableMap;
+import io.crate.common.collections.Lists2;
 import io.crate.expression.symbol.AggregateMode;
 import io.crate.expression.symbol.Aggregation;
 import io.crate.expression.symbol.SelectSymbol;
@@ -29,7 +29,6 @@ import io.crate.expression.symbol.Symbol;
 import io.crate.expression.symbol.SymbolVisitors;
 import io.crate.expression.symbol.Symbols;
 import io.crate.metadata.RowGranularity;
-import io.crate.planner.ExplainLeaf;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 
@@ -122,9 +121,9 @@ public class AggregationProjection extends Projection {
 
     @Override
     public Map<String, Object> mapRepresentation() {
-        return ImmutableMap.of(
+        return Map.of(
             "type", "HashAggregation",
-            "aggregations", ExplainLeaf.printList(aggregations)
+            "aggregations", '[' + Lists2.joinOn(", ", aggregations, Aggregation::toString) + ']'
         );
     }
 }
